--- a/nginx.conf
+++ b/nginx.conf
@@ -30,6 +30,19 @@ http {
     include /etc/nginx/conf.d/*.conf;
 
     server {
+        if ($http_user_agent ~ ^.*(ISUCONbot(-Mobile)?|ISUCONbot-Image\/|ISUCONCoffee|ISUCONFeedSeeker(Beta)?|isubot|Isupider|Isupider(-image)?\+|Mediapartners-ISUCON).*$) {
+            return 503;
+        }
+   
+	if ($http_user_agent ~ ^.*crawler\ \(https:\/\/isucon\.invalid\/(support\/faq\/|help\/jp\/).*$ ) {
+            return 503;
+        } 
+    
+	#if ($http_user_agent ~* ^.*(bot|crawler|spider)([-_ .\/;@()]|$).*$ ) {
+	if  ($http_user_agent ~* ^.*(bot|crawler|spider)([-_\ .\/\;@()]|$).*$ ) {
+            return 503;
+        }
+ 
         root /home/isucon/isucon10-qualify/webapp/public;
         listen 80 default_server;
         listen [::]:80 default_server;
